# CellPowerTrace

./: .gitignore  README.md
.github/workflows/: ci.yml
docker/: docker-compose.yml
docker/open5gs/: open5gs.yaml
docker/ueransim/: ueransim.yaml
docs/: ARCHITECTURE.md  FLOWS.md
pipeline/perl/: normalize_logs.pl
pipeline/python/: pyproject.toml
pipeline/python/cellpowertrace/: __init__.py  cli.py  kpi.py  regression.py
pm_driver/: Makefile  pm_sim.c  pm_sim.h
scenarios/: attach_idle_ping.yaml  attach_idle_short.yaml
scripts/: cellpowertrace  generate_docs_images.py  run_scenario.sh  setup.sh  verify_local.sh
